<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="onClickHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_nav_arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/UserDashboardTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/userxxx" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/UserName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_logo"
        android:textColor="@color/LonkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="405dp"
        android:layout_height="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/userdashboardac" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="407dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/userdashboardmail" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="408dp"
        android:layout_height="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/userdashboardnum" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="413dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:onClick="onClickHome"
        app:layout_constraintBottom_toBottomOf="@+id/imageView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/menulogo" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logout" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:onClick="onClickShell"
        app:layout_constraintBottom_toBottomOf="@+id/imageView33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView33"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/shell" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView34"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="@+id/imageView34"
        app:srcCompat="@drawable/tips" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:onClick="onClickProfile"
        app:layout_constraintBottom_toBottomOf="@+id/imageView31"
        app:layout_constraintEnd_toStartOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView31"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/user_f" />

</androidx.constraintlayout.widget.ConstraintLayout>